<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="es">
    <string name="app_name">Infomovil QA</string>
    <string name="strLanguage">es</string>
    <string name="tituloMexicoAcento">México</string>
    <string name="tituloTituloAcento">Título</string>
    <string name="tituloMexico">Mexico</string>
    <string name="tituloPrincipal">Crea tu sitio web</string>
    <string name="txtPromociones">Promociones</string>
    <string name="txtColorFondo">Color de fondo</string>
    <string name="txtElegirTemplate">1. Elegir Estilo</string>
    <string name="txtRegistro">Crea una cuenta</string>
    <string name="txtNombreoEmpresa">Nombre o Empresa</string>
    <string name="txtDescripcionCortaTitulo">Descripción corta</string>
    <string name="txtLogo">Logo</string>
    <string name="txtContacto">Contacto</string>
    <string name="txtTipoContacto">Tipo Contacto</string>
    <string name="txtImagenesTitulo">Imágenes</string>
    <string name="txtMapaTitutlo">Mapa</string>
    <string name="txtPerfilTitulo">Perfil</string>
    <string name="txtPerfilDescTitulo">Perfil y descripción</string>
    <string name="txtTipTitutlo">Tips</string>
    <string name="txtGaleriaImagenesTitulo">Galería de imágenes</string>
    <string name="txtNombreoEmpresa2">Nombre o Empresa</string>
    <string name="txtLogo2">Logo</string>
    <string name="txtDescripcionCortaTitulo2">Descripción corta</string>
    <string name="txtContacto2">Contacto</string>
    <string name="txtMapaTitutlo2">Mapa</string>
    <string name="txtTituloVideo2">Video</string>
    <string name="txtPromociones2">Promociones</string>
    <string name="txtGaleriaImagenesTitulo2">Galería de imágenes</string>
    <string name="txtPerfilTitulo2">Perfil</string>
    <string name="txtTituloDireccion2">Dirección</string>
    <string name="txtInfoAdicional2">Información adicional</string>
    <string name="negocioProfesion2">Negocio | Profesión</string>
    <string name="action_settings">Settings</string>
    <string name="iniciarSesion">Inicia sesión</string>
    <string name="iniciarSesionFacebook">Ingresa con Facebook</string>
    <string name="tienesCuenta">¿Ya tienes cuenta?</string>
    <string name="txtCrea">Crear | Editar</string>
    <string name="txtNombrar">Nombrar Publicar</string>
    <string name="bullet"></string>
    <string name="txtCondiciones1">Sí continúas, aceptas las</string>
    <string name="txtCondiciones2">condiciones del servicio</string>
    <string name="txtCondiciones3">y la</string>
    <string name="txtCondiciones4">política de privacidad</string>
    <string name="txtCondiciones5">de Infomovil</string>
    <string name="txtAgregarNombre">Agrega el nombre de tu empresa</string>
    <string name="txtDescripcionCorta">Agrega una descripción corta de tu negocio o servicio</string>
    <string name="txtTomarFoto">Tomar una foto</string>
    <string name="txtUsarFoto">Usar foto existente</string>
    <string name="txtNombrePromocion">Nombre de la promoción</string>
    <string name="txtDescripcionPromocion">Descripción de la promoción</string>
    <string name="txtVigenciaPromocion">Vigencia al:</string>
    <string name="txtImagenPromocion">Imagen de promoción</string>
    <string name="txtSinFoto">Sin foto</string>
    <string name="txtRedimir">¿Como redimir?</string>
    <string name="txtNoEspecificado">No especificado</string>
    <string name="txtLlamanos">Llámanos</string>
    <string name="txtEnviaEmail">Envíanos un e-mail</string>
    <string name="txtVisitanos">Visítanos</string>
    <string name="txtInfoAdicional">Información adicional</string>
    <string name="txtVacio"></string>
    <string name="txtNoEspecificadoEs">No especificado</string>
    <string name="txtLlamanosEs">Llámanos</string>
    <string name="txtEnviaEmailEs">Envíanos un e-mail</string>
    <string name="txtVisitanosEs">Visítanos</string>
    <string name="txtDireccionCorreo">Dirección de correo</string>
    <string name="txtPassLogin">Contraseña</string>
    <string name="txtOlvidarPass">¿Olvidaste tu contraseña?</string>
    <string name="txtBuscarYoutube">Busca en YouTube</string>
    <string name="txtSeleccionaVideo">Añade un video de YouTube</string>
    <string name="txtURLVideo">Busca por palabra clave o añade la dirección exacta aquí:</string>
    <string name="txtTituloVideo">Video</string>
    <string name="txtBuscarVideo">Buscar Video</string>
    <string name="txtDatosVideo">Datos del Video</string>
    <string name="txtAgregaContacto1">Agrega tus datos de contacto:</string>
    <string name="txtAgregaContacto2">Agrega más contactos y deja que tus clientes te encuentren fácilmente</string>
    <string name="txtPrimerNumero">Define un número telefónico</string>
    <string name="txtPrimerEmail">Define un e-mail</string>
    <string name="txtDatosWeb">Estos datos se usan en los botones grandes de contacto en la versión móvil de tu sitio web.</string>
    <string name="txtPlanProContactos">Con un Plan Pro, puedes agregar contactos adicionales.</string>
    <string name="txtContactoMexico">Recuerda que para recibir llamadas internacionales el formato es (1) XXX-XXX-XXXX (10 dígitos).</string>
    <string name="txtMaxImagenes1">Plan Básico: Puedes agregar hasta 5 imágenes.\nContrata un Plan Pro si deseas agregar más.</string>
    <string name="txtMaxImagenes2">Sube unas imágenes y haz tu sitio web más llamativo</string>
    <string name="txtImagenesVertical">Estas imágenes se mostrarán en una galería vertical</string>
    <string name="txtImagenRedimensiona">Las imágenes serán redimensionadas para adaptarse</string>
    <string name="txtTituloFoto">Nombre de imagen</string>
    <string name="txtAddImage">Añadir imágenes</string>
    <string name="txtTituloProductos">Describe tus productos y/o servicios</string>
    <string name="txtTituloAreas">Área geográfica que cubre tu empresa</string>
    <string name="txtTituloHorario">Para cada día, define el inicio y fin del horario</string>
    <string name="txtTituloMediosPago">Medios de pago aceptados</string>
    <string name="txtTituloAsociaciones">¿Eres miembro de alguna asociación comercial o profesional?</string>
    <string name="txtTituloBiografia">¿Qué mas deseas que la gente sepa acerca de ti?</string>
    <string name="txt"></string>
    <string name="txtTituloDireccion">Dirección</string>
    <string name="textoDireccion1">Dirección 1</string>
    <string name="textoDireccion2">Dirección 2</string>
    <string name="textoDireccion3">Dirección 3</string>
    <string name="textoCiudad">Ciudad</string>
    <string name="textoEstado">Estado</string>
    <string name="textoCP">CP</string>
    <string name="textoNombrePublicar1">Nombre:</string>
    <string name="txtNombrePublicar2">Nombre del contacto administrativo:</string>
    <string name="textoPubliDireccion1">Dirección 1:</string>
    <string name="textoPubliDireccion2">Dirección 2:</string>
    <string name="textoPubliCountry">País:</string>
    <string name="txtLlenarNombre">¿Cuál es tu nombre?</string>
    <string name="txtLlenarDireccion">¿Cuál es tu dirección?</string>
    <string name="txtLlenarCorreo">¿Cuál es tu correo electrónico?</string>
    <string name="txtTituloInfoAdicional">Información adicional</string>
    <string name="txtAgregaInfoAdicional1">Agrega información adicional acerca de ti o tu negocio</string>
    <string name="txtAgregaInfoAdicional2">Agrega mas información a tu sitio web para tus clientes y destaca de la competencia</string>
    <string name="txtAgregaBasicoInfoAdicional">Plan Básico: agrega una sección.\nPlan Pro: agrega hasta 2 secciones.</string>
    <string name="txtAgregarTitulo">Agrega un título</string>
    <string name="txtAddInfo">Añadir información</string>
    <string name="mensajeInformacionAdicionalPrueba">Para agregar más campos, contrata un Plan Pro ¿Deseas aprender más del Plan Pro?</string>
    <string name="txtRegistroFormulario">Por favor, crea una cuenta con tu e-mail y una contraseña.</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtConfirmPassword">Confirmar contraseña</string>
    <string name="txtPais">País</string>
    <string name="txtMovil">Número móvil</string>
    <string name="txtRegistrate">¡Regístrame!</string>
    <string name="infoPassword">Debe tener de 8 a 15 caracteres\n
    (letras y números).\n
    No puede contener la palabra Infomovil.\n
    No puede ser igual al correo.</string>
    <string name="infoRedimir">Sin campaña dejar en blanco</string>
    <string name="infoPasswordTamano">de 8 a 15 caracteres\n
    (letras y números)</string>
    <string name="infoPasswordInfomovil">La contraseña no puede contener la palabra infomovil</string>
    <string name="infoPasswordCorreo">La contraseña no puede ser igual al correo</string>
    <string name="txtInfoValida"></string>
    <string name="txtTerminarProceso">Selecciona un nombre para tu sitio web</string>
    <string name="txtMisitio">misitio</string>
    <string name="txtNombrarTitulo">3. Nombrar | Publicar</string>
    <string name="txtEjemDominio">www.misitio.%1$s</string>
    <string name="txtConfirmalo">¡Regístralo!</string>
    <string name="txtPublicar">Publicar</string>
    <string name="txtFelicidadesTitulo">¡Felicidades!</string>
    <string name="txtFelicidades">¡Tu sitio web se ha registrado!</string>
    <string name="txtEnLinea">El proceso de publicación puede tardar unos minutos.</string>
    <string name="txtRenova">Próxima renovación:</string>
    <string name="txtComparteSitio">Una vez publicado, ¡compártelo con tus amigos y contactos!</string>
    <string name="txtTituloCompartir">Compártelo con todos!</string>
    <string name="txtComparte">Acabo de crear un sitio web con www.infomovil.com\n ¡Visítalo y ayúdanos a crecer!\u0020</string>
    <string name="txtComparteTwitter">Acabo de crear un sitio web con infomovil.com. ¡Visítalo y ayúdanos a crecer!\u0020</string>
    <string name="txtSi">Si</string>
    <string name="txtNo">No</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtCargando">Cargando</string>
    <string name="txtPreguntaSalir">¿Deseas guardar los cambios antes de salir?</string>
    <string name="txtPreguntaCerrar">¿Estás seguro que deseas salir?\nTendrás que reingresar con tu usuario y contraseña.</string>
    <string name="action_search">Buscar</string>
    <string name="salirCuenta">Salir de la cuenta</string>
    <string name="txtWWW">www.</string>
    <string name="txtEstadisticasMenu">Reportes</string>
    <string name="txtCompartirMenu">Compartir</string>
    <string name="txtCuentaMenu">Cuenta</string>
    <string name="txtConfiguracionMenu">Configuración</string>
    <string name="txtNoticiasMenu">Noticias</string>
    <string name="txtTelGeneral">.tel</string>
    <string name="txtContactoEdicionInstruccion1">Pulsa sobre cualquier contacto para editarlo.</string>
    <string name="txtContactoEdicionInstruccion2">Para mostrarlo en tu sitio web, selecciona \"Sí\".</string>
    <string name="txtContactoEdicionInstruccion3">Para subir o bajarlo de posición, selecciona </string>
    <string name="txtContactoEdicionInstruccion4">y después mueve el contacto.</string>
    <string name="txtInstrucciones">Instrucciones</string>
    <string name="txtRedimirCodigo">Campaña canal</string>
    <string name="txtRecordarCuenta">&#160;Recordar mi cuenta</string>
    <string name="txtCodigoAsociado">Para activar tu Plan Pro ingresa el código que recibiste por correo, sino cuentas con el envíanos un correo a ops@infomovil.com y te lo haremos llegar</string>
    <string name="txtActivar">Activar</string>
    <string name="txtSaltar">Saltar</string>
    <string name="txtEditaSitio">Edita tu sitio web</string>
    <string name="txtSinCuenta">¿Aún no tienes cuenta?</string>
    <string name="txtRegistrate2">Regístrate</string>
</resources>