<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:fb="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:orientation="vertical" 
	android:gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

	<com.infomovil.infomovil.gui.common.TextWithFont
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp"
		android:gravity="center"
		android:text="@string/txtEditaSitio" 
		android:textColor="@color/colorBlanco"
		android:textSize="20sp" 
		android:textStyle="bold" />

	<com.facebook.widget.LoginButton
		android:id="@+id/authButton" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="10dp"
		android:textSize="19sp"
		android:background="@drawable/btnazul" 
		fb:fetch_user_info="true"
		fb:login_text="@string/iniciarSesionFacebook" 
		fb:logout_text="@string/iniciarSesionFacebook"/>

	<ImageView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:src="@drawable/lineo" />

	<com.infomovil.infomovil.gui.common.EditTextWithFont
		android:id="@+id/txtLoginEmail" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp" 
		android:background="@drawable/btnblancotransp"
		android:gravity="center_vertical" 
		android:hint="@string/txtEmail"
		android:inputType="text|textEmailAddress" 
		android:maxLength="255"
		android:textColor="@color/colorFuenteAzul" 
		android:textSize="19sp" />

	<com.infomovil.infomovil.gui.common.EditTextWithFont
		android:id="@+id/txtPassLogin" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp"
		android:paddingLeft="10dp" 
		android:background="@drawable/btnblancotransp"
		android:gravity="center_vertical" 
		android:hint="@string/txtPassLogin"
		android:inputType="textPassword" 
		android:maxLength="255"
		android:textColor="@color/colorFuenteAzul" 
		android:textSize="19sp" />

	<com.infomovil.infomovil.gui.common.TextWithFont
	     	android:layout_marginTop="10dp"
			android:id="@+id/txtOlvidastePass" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:clickable="true"
			android:onClick="recuperarPassword"
			android:text="@string/txtOlvidarPass" 
			android:textColor="@color/colorBlanco"
			android:textSize="19sp" />

	<com.infomovil.infomovil.gui.common.ButtonWithFont
	    android:layout_marginTop="10dp"
		android:id="@+id/botonIniciarLogin" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:background="@drawable/btnverderegistrate" 
		android:onClick="iniciarSesion"
		android:text="@string/iniciarSesion" 
		android:textColor="@color/colorBlanco"
		android:textSize="19sp" />
		
	<ImageView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:src="@drawable/lineo" />

	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:gravity="center"
		android:orientation="horizontal">

		<com.infomovil.infomovil.gui.common.TextWithFont
			android:layout_width="0dp" 
			android:layout_height="wrap_content"
			android:text="@string/txtSinCuenta" 
			android:layout_weight="7" 
			android:textColor="@color/colorBlanco"
			android:layout_marginRight="5dp"
			android:textSize="19sp" />

		<com.infomovil.infomovil.gui.common.TextWithFont
			android:layout_width="0dp" 
			android:layout_height="wrap_content"
			android:layout_weight="3" 
			android:layout_marginRight="5dp"
			android:onClick="registrarClick"
			android:clickable="true" 
			android:text="@string/txtRegistrate2"
			android:textColor="@color/colorFuenteVerde2" 
			android:textSize="19sp"
			android:textStyle="bold" />
	</LinearLayout>
	
	   <fragment
        android:id="@+id/fragment_terminos"
        android:layout_marginTop="20dp"
     	android:name="com.infomovil.infomovil.gui.principal.TerminosCondicionesFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	


</LinearLayout>
