
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/layoutCondiciones"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.infomovil.infomovil.gui.common.TextWithFont
            android:id="@+id/labelCondiciones1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/txtCondiciones1"
            android:textColor="@color/colorBlanco"
            android:textSize="12sp" />

        <com.infomovil.infomovil.gui.common.TextWithFont
            android:id="@+id/labelCondiciones2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" 
            android:text="@string/txtCondiciones2"
            android:textColor="@color/colorFuenteVerde2"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
	
	   <LinearLayout
        android:id="@+id/layoutPoliticas"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <com.infomovil.infomovil.gui.common.TextWithFont
            android:id="@+id/labelCondiciones3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/txtCondiciones3"
            android:textColor="@color/colorBlanco"
            android:textSize="12sp" />

        <com.infomovil.infomovil.gui.common.TextWithFont
            android:id="@+id/labelPoliticas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:clickable="true" 
            android:text="@string/txtCondiciones4"
            android:textColor="@color/colorFuenteVerde2"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.infomovil.infomovil.gui.common.TextWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCondiciones5"
            android:textColor="@color/colorBlanco"
            android:textSize="12sp" />
    </LinearLayout>
   

</LinearLayout>