<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparente"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btnazul"
        fb:fetch_user_info="true"
        fb:login_text="@string/iniciarSesionFacebook" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/lineamenu" />

    <com.infomovil.infomovil.gui.common.EditTextWithFont
        android:id="@+id/txtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_border"
        android:gravity="center_vertical"
        android:hint="@string/txtEmail"
        android:inputType="text|textEmailAddress"
        android:maxLength="255"
        android:textColor="@color/colorFuenteAzul"
        android:textSize="19sp" />

    <com.infomovil.infomovil.gui.common.EditTextWithFont
        android:id="@+id/txtPassLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_border"
        android:gravity="center_vertical"
        android:hint="@string/txtPassLogin"
        android:inputType="textPassword"
        android:maxLength="255"
        android:textColor="@color/colorFuenteAzul"
        android:textSize="19sp" />

    <CheckBox
        android:id="@+id/chkRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:button="@xml/custom_checkbox"
        android:layout_gravity="start"
        android:checked="false"
        android:onClick="recordarmeClick"
        android:text="@string/txtRecordarCuenta"
        android:textColor="@color/colorBlanco" />

    <com.infomovil.infomovil.gui.common.ButtonWithFont
        android:id="@+id/txtOlvidastePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@color/colorTransparente"
        android:onClick="recuperarPassword"
        android:text="@string/txtOlvidarPass"
        android:textColor="@color/colorBlanco"
        android:layout_gravity="start"
        android:textSize="17sp" />

    <com.infomovil.infomovil.gui.common.ButtonWithFont
        android:id="@+id/botonIniciarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/btnblanco2"
        android:onClick="iniciarSesion"
        android:text="@string/iniciarSesion"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp" />

</LinearLayout>