<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparente"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

    <com.infomovil.infomovil.gui.common.TextWithFont
        android:id="@+id/labelRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtRegistroFormulario"
        android:textColor="@color/colorBlanco"
        android:textSize="19sp" />

    <com.infomovil.infomovil.gui.common.EditTextWithFont
        android:id="@+id/txtNombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:maxLength="255"
        android:textColor="@color/colorFuenteAzul"
        android:textSize="19sp" />

    <com.infomovil.infomovil.gui.common.EditTextWithFont
        android:id="@+id/txtPasswordRegistro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:maxLength="255"
        android:textColor="@color/colorFuenteAzul"
        android:textSize="19sp" />

    <com.infomovil.infomovil.gui.common.EditTextWithFont
        android:id="@+id/txtNumeroRegistro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/txtConfirmPassword"
        android:inputType="textPassword"
        android:maxLength="255"
        android:textColor="@color/colorFuenteAzul"
        android:textSize="19sp" />

    <com.infomovil.infomovil.gui.common.ButtonWithFont
        android:id="@+id/btnRegitrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnverde"
        android:onClick="verificarUsuario"
        android:text="@string/txtRegistrate"
        android:textColor="@color/colorBlanco"
        android:textSize="19sp" />

</LinearLayout>