<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">


	<com.infomovil.infomovil.gui.common.TextWithFont
		android:id="@+id/lblMsgCodigo" android:layout_width="300dp"
		android:layout_height="wrap_content" android:text="@string/txtCodigoAsociado"
		android:layout_marginTop="35dp" android:layout_centerHorizontal="true"
		android:gravity="center" android:textColor="@color/colorBlanco"
		android:textSize="19sp" />


	<com.infomovil.infomovil.gui.common.EditTextWithFont
		android:id="@+id/txtRedimirCodigo" android:layout_width="300dp"
		android:maxLength="255" android:layout_height="35dp"
		android:layout_centerHorizontal="true" android:layout_below="@+id/lblMsgCodigo"
		android:layout_marginTop="35dp" android:hint="@string/txtRedimirCodigo"
		android:background="@drawable/rounded_border" android:textColor="@color/colorFuenteAzul"
		android:textSize="19sp" android:paddingLeft="10dp" android:inputType="text" />

	<LinearLayout android:layout_below="@+id/txtRedimirCodigo"
		android:id="@+id/layoutBotones" android:gravity="center"
		android:layout_marginTop="35dp" android:layout_width="match_parent"
		android:layout_height="50dp" android:orientation="horizontal"
		android:paddingLeft="16dp" android:paddingRight="16dp">

		<com.infomovil.infomovil.gui.common.ButtonWithFont
			android:id="@+id/btnActivar" android:layout_width="130dp"
			android:layout_height="40dp" android:background="@drawable/btnverde"
			android:text="@string/txtActivar" android:textColor="@color/colorBlanco"
			android:layout_marginRight="10dp" android:textSize="19sp"
			android:onClick="activar" />

		<com.infomovil.infomovil.gui.common.ButtonWithFont
			android:id="@+id/btnSaltar" android:layout_width="130dp"
			android:layout_height="40dp" android:background="@drawable/btnverde"
			android:text="@string/txtSaltar" android:textColor="@color/colorBlanco"
			android:textSize="19sp" android:onClick="saltar" />
	</LinearLayout>

</RelativeLayout>
